Resolves tdf#149944 - UI issues with Base's User Administration dialog

Buttons for add, delete user and change password moved into a menu

Change-Id: Ibddda5269f0a8a9219538833b1f871b041dd5341
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/137754
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>